--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -1,4 +1,13 @@
 <h1>Hello</h1>
-<p>Hello Honeybadger</p>
-<p>see how abc string is generated in app/assets/javascripts/hello.coffee</p>
-<p id="example"></p>
+
+<p>A simple example, be sure your browser's developer console is open.</p>
+<p>Click ABC to make ABCs.</p>
+<p>Click BOOM to cause an exception (make sure your HONEYBADGER_API_KEY is set in the environment properly).</p>
+<p>javascript is at app/javascript/src/hello.js</p>
+
+<form>
+  <button id="abc">ABC</button>
+  <button id="boom">BOOM</button>
+</form>
+
+<p id="hello"></p>
