Improve example error for #5.

--- a/app/views/hello/index.html.erb
+++ b/app/views/hello/index.html.erb
@@ -1,13 +1,13 @@
 <h1>Hello</h1>
 
 <p>A simple example, be sure your browser's developer console is open.</p>
-<p>Click ABC to make ABCs.</p>
-<p>Click BOOM to cause an exception (make sure your HONEYBADGER_API_KEY is set in the environment properly).</p>
-<p>javascript is at app/javascript/src/hello.js</p>
+<p>Click "Say Hello" to print "Hello World".</p>
+<p>Click "Throw Error" to cause an exception.</p>
+<p>javascript is at app/javascript/src/main.js</p>
 
 <form>
-  <button id="abc">ABC</button>
-  <button id="boom">BOOM</button>
+  <button id="helloBtn">Say Hello</button>
+  <button id="throwBtn">Throw Error</button>
 </form>
 
 <p id="hello"></p>
